# hft-ops

./: .gitignore  CHANGELOG.md  CODEBASE.md  EXPERIMENT_GUIDE.md  README.md  VALIDATION_AND_DESIGN_2026_05_30.md  pyproject.toml
.github/workflows/: test.yml
experiments/: cycle7_evaluator_v1.yaml  e5_60s_huber_cvml_unified.yaml  e5_60s_importance_audit.yaml  nvda_hmhp_128feat_arcx_h10.yaml  nvda_hmhp_128feat_xnas_h10.yaml  nvda_hmhp_40feat_xnas_h10.yaml  nvda_hmhp_tb_volscaled.yaml  nvda_tlob_h100_tb_volscaled.yaml  nvda_tlob_h10_v1.yaml
experiments/retroactive/: e4_baselines.yaml  e4_tlob_h60.yaml  e5_30s_huber_cvml.yaml  e5_30s_huber_nocvml.yaml  e5_60s_gmadl_cvml.yaml  e5_60s_huber_cvml.yaml  e5_60s_huber_nocvml.yaml  e5_baselines.yaml  e6_calibrated_conviction.yaml  hybrid_readability_ridge_h10.yaml  nvda_bigmove_opportunity_v1.yaml  nvda_h10_weighted_v1.yaml  nvda_hmhp_128feat_arcx_h10.yaml  nvda_hmhp_128feat_xnas_h10.yaml  nvda_hmhp_40feat_h10.yaml  nvda_hmhp_40feat_h60_profit8bps.yaml  nvda_hmhp_multihorizon_v1.yaml  nvda_hmhp_regression_h10_primary.yaml  nvda_hmhp_triple_barrier_calibrated.yaml  nvda_hmhp_triple_barrier_v1.yaml  nvda_hmhp_triple_barrier_volscaled.yaml  nvda_short_term_hmhp_v1.yaml  nvda_temporal_gradboost_h10.yaml  nvda_temporal_ridge_h10.yaml  nvda_tlob_128feat_regression_finegrained_h10.yaml  nvda_tlob_128feat_regression_h10.yaml  nvda_tlob_128feat_regression_h10_T20.yaml  nvda_tlob_98feat_h100.yaml  nvda_tlob_bigmove_v1.yaml  nvda_tlob_h50_v1.yaml  nvda_tlob_raw_h50_v1.yaml  nvda_tlob_repo_match_h50.yaml  nvda_tlob_v2_h100.yaml  simple_model_ablation.yaml
experiments/sweeps/: README.md  backtest_cost_sensitivity.yaml  cycle10_r19_multi_seed.yaml  cycle12_r20_hmhp_r.yaml  cycle12_r20_hmhp_r_multi_seed.yaml  cycle13_r22_tlob_point_return_h60_multiseed.SUPERSEDED_DUPLICATE_OF_R16E.yaml  cycle5_multi_arm.yaml  cycle5_smoke.yaml  cycle6_r16a_point_vs_peak_H60.yaml  cycle7_r16c_multi_seed_r16a.yaml  cycle8_r16d_horizon_axis.yaml  cycle9_r16e_multi_seed_h60_point.yaml  e5_phase2_sweep.yaml  horizon_sensitivity.yaml  loss_ablation.yaml  seed_stability.yaml
ledger/: README.md
ledger/archive/2026-07-07-snapshot/: README.md  index.json
ledger/r16c_verdicts/: cycle7_r16c_multi_seed_r16a_20260512T063700_verdict.json  cycle7_r16c_multi_seed_r16a_20260512T063700_verdict.txt
ledger/r16d_verdicts/: cycle8_r16d_horizon_axis_20260513T060832_verdict.json  cycle8_r16d_horizon_axis_20260513T060832_verdict.txt
ledger/r16e_verdicts/: cycle9_r16e_multi_seed_h60_point_20260514T015452_verdict.json  cycle9_r16e_multi_seed_h60_point_20260514T015452_verdict.txt
ledger/r19_classification_verdicts/: r17a_vs_r19_pt_precision_20260515T143518.json
ledger/r19_multi_seed_verdicts/: cycle10_bimodality_analysis_20260519T171559.json  cycle10_r19_multi_seed_20260518T222513_verdict_20260519T113724.json
ledger/r20_multi_seed_verdicts/: cycle12_r20_hmhp_r_multi_seed_20260519T194439_verdict_20260519T211307.json  cycle12_r20_hmhp_r_multi_seed_20260519T194439_verdict_20260519T230413.json
ledger/r20_verdicts/: cycle12_r20_hmhp_r_20260519T184402_verdict_20260519T193458.json  cycle12_r20_hmhp_r_20260519T184402_verdict_20260520T181450.json
scripts/: analyze_cycle10_bimodality.py  analyze_r16c.py  analyze_r16d.py  analyze_r16e.py  analyze_r17a_vs_r19_pt_precision.py  analyze_r19_multi_seed.py  analyze_r20_hmhp_r.py  analyze_r20_hmhp_r_multi_seed.py  compare_experiments.py  experiment_dashboard.py  generate_retroactive_manifests.py  migrate_feature_presets_to_registry.py  validate_manifest.py
src/hft_ops/: __init__.py  cli.py  cli_parallel_sweep.py  config.py  paths.py  utils.py
src/hft_ops/feature_sets/: __init__.py  hashing.py  producer.py  registry.py  schema.py  writer.py
src/hft_ops/ledger/: __init__.py  comparator.py  dedup.py  discovery_record.py  experiment_record.py  ledger.py  r16c_analysis.py  r16d_analysis.py  r16e_analysis.py  register.py  signal_dir.py  statistical_compare.py  sweep_aggregate.py
src/hft_ops/manifest/: __init__.py  _field_introspection.py  loader.py  resolver.py  schema.py  slot_taxonomy.py  sweep.py  validator.py
src/hft_ops/monitor/: __init__.py  discovery_reader.py  drift.py  ledger_reader.py  render.py  table.py
src/hft_ops/provenance/: __init__.py  lineage.py
src/hft_ops/scheduler/: __init__.py  executor.py  extraction_cache.py  resources.py  signal_handler.py  sweep_dispatch.py
src/hft_ops/stages/: __init__.py  _override_discipline.py  backtesting.py  base.py  contract_preflight.py  dataset_analysis.py  extraction.py  post_training_gate.py  raw_analysis.py  signal_export.py  training.py  validation.py
tests/: conftest.py  test_backtest_metrics_harvest.py  test_bugfixes_phase2b.py  test_cli_cache_pin.py  test_cli_compatibility_fp_validator.py  test_cli_fingerprint_explain.py  test_cli_harvest_trust_columns.py  test_cli_monitor.py  test_cli_parallel_sweep_aggregate.py  test_cli_stages_validation.py  test_comparator_fingerprint_diff.py  test_compare_metric_resolution.py  test_contract_preflight.py  test_dataset_health_harvest.py  test_dedup.py  test_discovery_record.py  test_experiment_record_feature_set_ref.py  test_extraction_cache.py  test_extraction_cache_hygiene.py  test_feature_sets_hashing.py  test_feature_sets_producer.py  test_feature_sets_registry.py  test_feature_sets_schema.py  test_feature_sets_writer.py  test_field_introspection.py  test_fingerprint_base_mutation.py  test_fingerprint_feature_set_cache.py  test_fingerprint_feature_set_mutation.py  test_fingerprint_hard_fail.py  test_fingerprint_integrity.py  test_fingerprint_signal_export_backtest.py  test_ledger.py  test_ledger_rebuild_index.py  test_ledger_render_helpers.py  test_loader_backtesting_unknown_keys.py  test_loader_cyclic_variable_resolution.py  test_loader_unknown_keys.py  test_loader_unknown_stage.py  test_manifest_schema.py  test_monitor_backtest_metric.py  (+42 more)
tests/fixtures/monitor_discovery/: _subsec_validate.json  foo.shard0of4.json  gate0_diagnosis.json  gex_features.json  (+2 more)
tests/test_security/: test_np_load_allow_pickle_false.py
(+186 files in other folders)
