[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hft-ops"
version = "0.3.0-dev"
description = "Central experiment orchestrator for the HFT pipeline"
requires-python = ">=3.10"
dependencies = [
    "hft-contracts",
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    # Phase 8A.1 (2026-04-20): filelock-backed GPU semaphore +
    # concurrent extraction-cache populate. Pure-Python, no compiled
    # dependencies. Using >=3.12 for uniform `fcntl.flock` behavior on
    # macOS + Linux (older versions had inconsistent NFS handling).
    "filelock>=3.12",
    # Phase 8B (2026-04-20): SemVer MAJOR.MINOR parsing for
    # `hft_ops.ledger.ledger._index_schema_needs_rebuild`. Pure-Python.
    "packaging>=23.0",
    # Phase V.B.4b (2026-04-21): hft-metrics v0.1.5+ ships
    # `pairwise_paired_bootstrap_compare` + `benjamini_hochberg_qvalues`,
    # consumed by `hft_ops.ledger.statistical_compare.compare_sweep_statistical`
    # (the backing function for `hft-ops sweep compare`). Pin bumped to
    # >=0.1.6 after v0.1.5 post-audit surfaced a tail-padding bias + weak
    # degenerate-null guard in `pairwise_paired_bootstrap_compare`; v0.1.6
    # patch fixes both (see hft-metrics CHANGELOG [0.1.6] entry). numpy
    # pulled in transitively through hft-metrics (leaf package with
    # numpy>=1.24).
    "hft-metrics>=0.1.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-tmp-files>=0.0.2"]

[project.scripts]
hft-ops = "hft_ops.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
