[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hft-ops"
version = "0.3.0-dev"
description = "Central experiment orchestrator for the HFT pipeline"
requires-python = ">=3.10"
dependencies = [
    # Phase A.5.2 (2026-04-24) bumps the pin from bare to `>=2.3.0` —
    # hft-ops signal_export consumes `hft_contracts.timestamp_utils.is_after_cutoff`
    # which first shipped in hft-contracts 2.3.0 (Phase A.5.1). A pre-2.3.0
    # install would fail at import time with ImportError. See hft-ops
    # CHANGELOG [0.3.0-dev § A.5.2] for the migration note.
    # Cycle 2 / Option F (2026-05-07): bumped >=2.3.0 → >=2.5.0 after Cyclelet B
    # P2.A (v2.4.0 added `TestMetricsCIArtifact` + bootstrap CI primitive,
    # consumed by `hft_ops.ledger.ledger._POST_STAGE_ARTIFACT_PATTERNS`) +
    # P2.C (v2.5.0 added `PairwiseCompareArtifact` + K-way pairwise compare,
    # consumed by `hft_ops.ledger.statistical_compare.compare_sweep_statistical`
    # adapter for `hft-ops sweep compare` CLI). Strictly additive bump per
    # SemVer; no symbols removed.
    "hft-contracts>=2.5.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    # Phase 8A.1 (2026-04-20): filelock-backed GPU semaphore +
    # concurrent extraction-cache populate. Pure-Python, no compiled
    # dependencies. Using >=3.12 for uniform `fcntl.flock` behavior on
    # macOS + Linux (older versions had inconsistent NFS handling).
    "filelock>=3.12",
    # Phase 8B (2026-04-20): SemVer MAJOR.MINOR parsing for
    # `hft_ops.ledger.ledger._index_schema_needs_rebuild`. Pure-Python.
    "packaging>=23.0",
    # Phase V.B.4b (2026-04-21): hft-metrics v0.1.5+ ships
    # `pairwise_paired_bootstrap_compare` + `benjamini_hochberg_qvalues`,
    # consumed by `hft_ops.ledger.statistical_compare.compare_sweep_statistical`
    # (the backing function for `hft-ops sweep compare`). Pin bumped to
    # >=0.1.7 after Phase V.1 post-audit (Agent 2 H1 + Agent 4 H2 + Agent 5
    # MED): the CLI `sweep_compare` at cli.py renders the per-pair
    # `r.n_nonfinite_replaced` column (v0.1.7 L3.1 observability field).
    # An operator on a v0.1.6-only install would hit AttributeError at
    # CLI render time. The previous `>=0.1.6` pin closed the v0.1.5 CRITICAL
    # tail-padding bug-fix gap but left this v0.1.7 consumer-contract gap
    # open; tightening to `>=0.1.7` closes both. numpy pulled in
    # transitively through hft-metrics (leaf package with numpy>=1.24).
    # >=0.1.9 after Cluster Z extension (Sub-cycle 1 2026-05-12): block_bootstrap_ci
    # extended to 4-tuple with n_nonfinite_replaced counter (mirrors v0.1.7 pairwise
    # pattern). hft-ops doesn't directly consume the 4-tuple but stays aligned with
    # the producer floor — pre-v0.1.9 installs could hit BREAKING API change via
    # transitive dependency (trainer + evaluator both pin >=0.1.9).
    "hft-metrics>=0.1.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-tmp-files>=0.0.2"]

[project.scripts]
hft-ops = "hft_ops.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
